@@ -1,4 +1,4 @@
-# vnStat 2.8 config file
+# vnStat 2.9 config file
 ##
 
 # default interface (leave empty for automatic selection)
@@ -186,6 +186,9 @@ TransparentBg 0
 LargeFonts 0
 LineSpacingAdjustment 0
 ImageScale 100
+
+# hourly graph mode (0 = 24 hour sliding window, 1 = begins from midnight)
+HourlyGraphMode 0
 
 # 5 minutes graph size control
 5MinuteGraphResultCount 576
