@@ -122,7 +122,7 @@ If
 .I date
 isn't available in the database then the closest later date will be used.
 .I date
-supports the following formats: YYYY-MM-DD HH:MM and YYYY-MM-DD.
+supports the following formats: YYYY-MM-DD HH:MM, YYYY-MM-DD and "today".
 This option can only be used with
 .B "--json"
 ,
