@@ -78,6 +78,7 @@ int loadcfg(const char *cfgfile, const ConfigType type)
 		 {"ImageScale", 0, &cfg.imagescale, 0, 0},
 		 {"5MinuteGraphResultCount", 0, &cfg.fivegresultcount, 0, 0},
 		 {"5MinuteGraphHeight", 0, &cfg.fivegheight, 0, 0},
+		 {"HourlyGraphMode", 0, &cfg.hourlygmode, 0, 0},
 		 {"SummaryGraph", 0, &cfg.summarygraph, 0, 0},
 		 {"EstimateStyle", 0, &cfg.estimatestyle, 0, 0},
 		 {"BarColumnShowsRate", 0, &cfg.barshowsrate, 0, 0},
@@ -215,6 +216,7 @@ void validatecfg(const ConfigType type)
 		validateint("ImageScale", &cfg.imagescale, IMAGESCALE, 50, 500);
 		validateint("5MinuteGraphResultCount", &cfg.fivegresultcount, FIVEGRESULTCOUNT, FIVEGMINRESULTCOUNT, 2000);
 		validateint("5MinuteGraphHeight", &cfg.fivegheight, FIVEGHEIGHT, FIVEGMINHEIGHT, 2000);
+		validateint("HourlyGraphMode", &cfg.hourlygmode, HOURLYGMODE, 0, 1);
 		validatebool("SummaryGraph", &cfg.summarygraph, SUMMARYGRAPH);
 		validateint("EstimateStyle", &cfg.estimatestyle, ESTIMATESTYLE, 0, 2);
 		validatebool("BarColumnShowsRate", &cfg.barshowsrate, BARSHOWSRATE);
@@ -413,6 +415,7 @@ void defaultcfg(void)
 	cfg.imagescale = IMAGESCALE;
 	cfg.fivegresultcount = FIVEGRESULTCOUNT;
 	cfg.fivegheight = FIVEGHEIGHT;
+	cfg.hourlygmode = HOURLYGMODE;
 	cfg.summarygraph = SUMMARYGRAPH;
 	cfg.estimatestyle = ESTIMATESTYLE;
 	cfg.barshowsrate = BARSHOWSRATE;
